--- a/JS/Homeworks/index.html
+++ b/JS/Homeworks/index.html
@@ -17,7 +17,7 @@
             <button class="btn btn-primary" onclick="checkedData()">შემოწმება</button>
         </div>
         <div class="row" style="padding-top: 50px;">
-            <div class="col-3">
+            <div id="bmw" class="col-3" onclick="displayDescription(this.id)">
                 <img src="images/audi.jpg" class="w-100">
                 <button class="btn btn-primary w-100">ყიდვა</button>
             </div>
