add alert(all car)

--- a/JS/Homeworks/index.html
+++ b/JS/Homeworks/index.html
@@ -18,18 +18,18 @@
         </div>
         <div class="row" style="padding-top: 50px;">
             <div id="bmw" class="col-3" onclick="displayDescription(this.id)">
-                <img src="images/audi.jpg" class="w-100">
-                <button class="btn btn-primary w-100">ყიდვა</button>
-            </div>
-            <div class="col-3">
                 <img src="images/bmw.jpg" class="w-100">
                 <button class="btn btn-primary w-100">ყიდვა</button>
             </div>
-            <div class="col-3">
+            <div id="mercedes" class="col-3" onclick="displayDescription(this.id)">
                 <img src="images/mercedes.jpg" class="w-100">
                 <button class="btn btn-primary w-100">ყიდვა</button>
             </div>
-            <div class="col-3">
+            <div id="audi" class="col-3" onclick="displayDescription(this.id)">
+                <img src="images/audi.jpg" class="w-100">
+                <button class="btn btn-primary w-100">ყიდვა</button>
+            </div>
+            <div id="skoda" class="col-3" onclick="displayDescription(this.id)">
                 <img src="images/skoda.jpg" class="w-100">
                 <button class="btn btn-primary w-100">ყიდვა</button>
             </div>
