--- a/JS/Homeworks/index.html
+++ b/JS/Homeworks/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body onload="setName()">
     <div class="container" style="margin-top: 150px;">
         <div class="text-center">
             <input id="price" placeholder="შეიყვანეთ ფასი">
@@ -18,18 +18,22 @@
         </div>
         <div class="row" style="padding-top: 50px;">
             <div id="bmw" class="col-3" onclick="displayDescription(this.id)">
+                <h2 id="titlebmw"></h2>
                 <img src="images/bmw.jpg" class="w-100">
                 <button class="btn btn-primary w-100">ყიდვა</button>
             </div>
             <div id="mercedes" class="col-3" onclick="displayDescription(this.id)">
+                <h2 id="titlemercedes"></h2>
                 <img src="images/mercedes.jpg" class="w-100">
                 <button class="btn btn-primary w-100">ყიდვა</button>
             </div>
             <div id="audi" class="col-3" onclick="displayDescription(this.id)">
+                <h2 id="titleaudi"></h2>
                 <img src="images/audi.jpg" class="w-100">
                 <button class="btn btn-primary w-100">ყიდვა</button>
             </div>
             <div id="skoda" class="col-3" onclick="displayDescription(this.id)">
+                <h2 id="titleskoda"></h2>
                 <img src="images/skoda.jpg" class="w-100">
                 <button class="btn btn-primary w-100">ყიდვა</button>
             </div>
