--- a/JS/Homeworks/index.html
+++ b/JS/Homeworks/index.html
@@ -24,24 +24,24 @@
                 მანქანა</button>
         </div>
         <div class="row" style="padding-top: 50px;">
-            <div id="bmw" class="col-3" onclick="displayDescription(this.id)">
+            <div class="col-3">
                 <h2 id="titlebmw"></h2>
-                <img src="images/bmw.jpg" class="w-100">
+                <img id="bmw" src="images/bmw.jpg" class="w-100" onclick="displayDescription(this.id)">
                 <button id="disablebmw" class="btn btn-primary w-100">ყიდვა</button>
             </div>
-            <div id="mercedes" class="col-3" onclick="displayDescription(this.id)">
+            <div class="col-3">
                 <h2 id="titlemercedes"></h2>
-                <img src="images/mercedes.jpg" class="w-100">
+                <img id="mercedes" src="images/mercedes.jpg" class="w-100" onclick="displayDescription(this.id)">
                 <button id="disablemercedes" class="btn btn-primary w-100">ყიდვა</button>
             </div>
-            <div id="audi" class="col-3" onclick="displayDescription(this.id)">
+            <div class="col-3">
                 <h2 id="titleaudi"></h2>
-                <img src="images/audi.jpg" class="w-100">
+                <img id="audi" src="images/audi.jpg" class="w-100" onclick="displayDescription(this.id)">
                 <button id="disableaudi" class="btn btn-primary w-100">ყიდვა</button>
             </div>
-            <div id="skoda" class="col-3" onclick="displayDescription(this.id)">
+            <div class="col-3">
                 <h2 id="titleskoda"></h2>
-                <img src="images/skoda.jpg" class="w-100">
+                <img id="skoda" src="images/skoda.jpg" class="w-100" onclick="displayDescription(this.id)">
                 <button id="disableskoda" class="btn btn-primary w-100">ყიდვა</button>
             </div>
         </div>
