--- a/JS/Homeworks/index.html
+++ b/JS/Homeworks/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body onload="setName()">
+    <nav class="navbar navbar-light bg-light justify-content-between">
+        <button class="btn btn-outline-danger my-2 my-sm-0" onclick="redirectLogin()">login</button>
+    </nav>
     <div class="container" style="margin-top: 150px;">
         <div class="text-center">
             <input id="price" placeholder="შეიყვანეთ ფასი">
@@ -47,6 +50,7 @@
         </div>
     </div>
     <script src="homework4.js"></script>
+    <script src="homework6.js"></script>
 </body>
 
 </html>
